--- a/Exp_Design.tex
+++ b/Exp_Design.tex
@@ -1,10 +1,10 @@
-\chapter{Experimental Design}
+\chapter{Experimental Design} \label{ch:Exp_Design}
 
 \section{Testing Considerations}
 
-Before venturing further, we should summarize the goals of the UKF framework described previously with particular attention to unmanned aircraft system (UAS) operations. This ROS package was designed with the express intent of producing estimates of the position vector $\mathbf{p}$ and orientation quaternion $\mathbf{q}$ of a rotorcraft UAV in real time. Thus, the experiments testing \texttt{kalman\_sense}'s efficacy compare the filter's estimates of position and orientation to the ``ground truth'' as measured by a Vicon\footnote{\url{https://www.vicon.com}} motion capture system.
+Before venturing further, we should summarize the goals of the UKF framework described previously, paying particular attention to unmanned aircraft system (UAS) operations. This ROS package was designed with the express intent of producing estimates of the position vector $\mathbf{p}$ and orientation quaternion $\mathbf{q}$ of a rotorcraft UAV in real time. Thus, the experiments testing \texttt{kalman\_sense}'s efficacy compare the filter's estimates of position and orientation to the ``ground truth'' as measured by a Vicon\footnote{\url{https://www.vicon.com}} motion capture system.
 
-This system depends upon two sensors: a global-shutter camera and an IMU. The IMU used in this experiment contains a 3-axis accelerometer and 3-axis gyroscope. To simulate both sensors moving through the scene in a manner reminiscent of hovering rotorcraft flight, a rolling test stand was constructed to carry the sensors safely throughout a large motion capture environment. Mounting the sensor suite on a large, steady, level platform allows for a high degree of control over the accelerations and angular velocities felt by the IMU, as well as the motion seen by the ventral camera. In order to validate the UKF framework's effectiveness under ideal conditions, a modern laptop computer with an Intel i7 processor and 16~GB of RAM was used for all computation. The floor of the motion capture environment was strewn with a mixture of April tags and modified Quick Response (QR) codes in order to provide sufficient visual features for PTAM to track.
+This system depends upon two sensors: a global-shutter camera and an IMU. The IMU used in this experiment contains a 3-axis accelerometer and 3-axis gyroscope. To simulate both sensors moving through the scene in a manner reminiscent of hovering rotorcraft flight, a rolling test stand was constructed to carry the sensors safely throughout a large motion capture environment. Mounting the sensor suite on a large, steady, level platform allows for a high degree of control over the accelerations and angular velocities felt by the IMU, as well as the motion seen by the ventral camera. In order to validate the UKF framework's effectiveness under ideal conditions, a modern laptop computer with an Intel i7 processor and 16~GB of RAM was used for all computations. The floor of the motion capture environment was strewn with a mixture of April tags and modified Quick Response\footnote{\url{https://en.wikipedia.org/wiki/QR_code}} (QR) codes in order to provide sufficient visual features for PTAM to track.
 
 tk: figure of sensor mount
 
@@ -34,8 +34,10 @@ tk: figure of sensor mount
 
 \section{The Experiments}
 
-A series of three experiments were designed to characterize the UKF framework's effectiveness in various regimes of motion. To characterize the accuracy of state estimates in lengthy, monodimensional motion, two ``long walk'' experiments were conducted---one in the $x$-direction, the other in the $y$-direction. These experiments were meant to determine changes in estimate accuracy over large, planar translations (for example, to uncover the evolution of error in the system over time while effectively manipulating only one state variable). For each long walk, the test stand was translated without rotation along the positive $x$- and $y$-axes over distances of approximately seven meters, then returned to the starting location via the same path.
+A series of three experiments were designed to characterize the UKF framework's effectiveness in various regimes of motion. To characterize the accuracy of state estimates in lengthy, unidimensional motion. The first two experiments consisted of ``long walks'' in the $x$-direction and $y$-direction. These experiments were meant to determine changes in estimate accuracy over large, planar translations (for example, to uncover the evolution of error in the system over time while effectively manipulating only one state variable). For each long walk, the test stand was translated without rotation along the positive $x$- and $y$-axes over distances of approximately seven meters, then returned to the starting location via the same path.
 
 The third experiment was a rectangular translation designed to characterize the system's effectiveness when translated along two axes. Again, the cart was translated without rotation around the corners of a nearly square rectangle having sides approximately four meters in length.
 
-Three data streams were collected for analysis using rosbags, 
+Three data streams were collected for analysis using the \texttt{rosbag} ROS data recording utility.
+
+tk: more explanation of post processing
