--- a/bibliography.bib
+++ b/bibliography.bib
@@ -65,7 +65,7 @@ month={May},}
 @article{Weiss2011,
  author = {Weiss, Stephan and Scaramuzza, Davide and Siegwart, Roland},
  title = {{Monocular-SLAM-Based Navigation for Autonomous Micro Helicopters in GPS-denied Environments}},
- journal = {J. Field Robot.},
+ journal = {Journal of Field Robotics},
  issue_date = {November 2011},
  volume = {28},
  number = {6},
