changes to sensor mount fig

--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -129,6 +129,14 @@ The corrected covariance $\mathbf{P}_{k | k}$ is the difference between the pred
 \mathbf{P}_{k | k} = \mathbf{P}_{k | k-1} - \mathbf{K}_{k} \mathbf{P}_{k | k-1} \mathbf{K}_{k}^{T} .
 \end{equation}
 
+\subsection{Process Model} \label{Process_Model}
+
+\subsection{Observation Model} \label{Observation_Model}
+
+\subsubsection{Quaternion Continuity Correction}
+
+
+
 \subsection{Process Noise Covariance} \label{sec:Q_Matrix}
 
 The process noise covariance matrix $\mathbf{Q}_{k} \in \mathbb{R}^{n \times n}$ is symmetric, time-dependent, and positive definite. We assume that its nonzero coefficients are a function of multiple integrations between the linear accelerations and angular velocities measured by the vehicle's 3-axis accelerometer and 3-axis gyroscope.
