--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,7 @@
 \documentclass[11 pt]{report}
 
 \usepackage{geometry}
-\geometry{
-letterpaper,
-top=1.25in,
-bottom=1.25in,
-left=1.5in,
-right=1.5in}
+\geometry{letterpaper,top=1.25in,bottom=1.25in,left=1.5in,right=1.5in}
 
 \usepackage{graphicx}
 \usepackage{microtype}
@@ -52,10 +47,11 @@ right=1.5in}
 
 \begin{comment}
 \tableofcontents
-
 \listoftables
 \end{comment}
+
 \listoffigures
+
 \input{Acronyms.tex}
 
 \input{Introduction.tex}
