added abstract and acknowledgments

--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
 
-This thesis presents the formulation and implementation of an Unscented Kalman Filter (UKF) framework for fusion of visual and inertial sensors in unmanned aircraft navigation. Specifically, we fuse sensor readings from a 3-axis accelerometer, 3-axis gyroscope, and a Simultaneous Localization and Mapping (SLAM) algorithm to estimate the pose of an aircraft capable of hovering flight, such as a quadcopter. We discuss the formulation of our UKF fusion algorithm, the development of a Robot Operating System (ROS) software package implementing the algorithm, and experiments in which this algorithm was used to track the motion of a physical vehicle simulating hovering flight in an indoor environment. We evaluate the filter's effectiveness by comparing its output to ground truth as captured by a Vicon motion capture system. We then discuss possible applications of this system and future work which may build upon the results developed herein.
+This thesis presents the formulation and implementation of an Unscented Kalman Filter (UKF) framework for fusion of visual and inertial sensors in unmanned aircraft navigation. Specifically, we fuse sensor readings from a 3-axis accelerometer, 3-axis gyroscope, and a Simultaneous Localization and Mapping (SLAM) algorithm to estimate the pose of an aircraft capable of hovering flight, such as a quadcopter. We discuss the formulation of our UKF fusion algorithm, the development of a Robot Operating System (ROS) software package implementing the algorithm, and experiments in which this algorithm was used to track the motion of a physical vehicle simulating hovering flight in an indoor environment. We verify the filter's effectiveness by comparing its output to ground truth as captured by a Vicon motion capture system. We then discuss possible applications of this system and future work which may build upon the results developed herein.
