--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,3 +1,9 @@
 \chapter*{Acknowledgments}
 
-It is my distinct pleasure to thank all of the @@@@@@
+This work would not have been possible were it not for my graduate adviser and committee chair, Dr.~Kevin Kochersberger. Dr.~Kochersberger has supported me since October 2012 when he agreed to serve as faculty adviser for my undergraduate design team. Since then, Dr.~Kochersberger has guided my work and connected me with numerous opportunities for which I am eternally grateful.
+
+It is also my pleasure to thank Dr.~Danette Allen of the NASA Langley Autonomy Incubator, who took me on as an intern in her lab and taught me much of what I know today about Kalman filtering. Dr.~Allen supplied me with both funding and equipment in order to perform this research, even going so far as to allow me to use her motion capture facilities for my experiments.
+
+I would also like to thank Dr.~Loc Tran, James Neilan, and Ralph Williams, who collectively provided hours of programming guidance. 
+
+Thanks also to Samuel Rubenking, who stuck with me to the end. Thanks, Sam.
