--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,8 @@
 \usepackage[margin=0.1\textwidth]{caption}
 \usepackage{subcaption}
 
+\usepackage{todonotes}
+
 \linespread{1.6}
 
 \hypersetup{
@@ -73,5 +75,6 @@
 \bibliography{bibliography}
 
 %\appendix
+% http://tex.stackexchange.com/questions/49643/making-appendix-for-thesis
 
 \end{document}
